infra/kubernetes/infrastructure/monitoring/monitoring-ingress/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-middleware
  namespace: monitoring
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  basicAuth:
    secret: monitoring-middleware-auth
    removeHeader: true
