infra/kubernetes/infrastructure/monitoring/monitoring-ingress/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-https
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.memo.sehindemi.com
      secretName: grafana-tls
  rules:
    - host: grafana.memo.sehindemi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
